StorefrontDemo/src/main/webapp/css/Storefront.less
/* Copyright (c) 2013 NuoDB, Inc. */

@import "prefixer";

body {
	overflow-y: scroll;
	padding-top: 20px;
}

form {
	margin: 0;
}

.loading {
	background: transparent url(../img/loading.gif) no-repeat 50% 50%;
	width: 100%;
	height: 100px;
}

.hidden {
	display: none;
}

.icon-github {
	background: url(../img/github.png);
	width: 16px;
	height: 16px;
	margin-top: 0;
}

.icon-nuodb {
	background: url(../img/nuodb.png);
	width: 16px;
	height: 16px;
	margin-top: 0;
}

th.text-right, td.text-right {
	text-align: right;
}

th.text-center, td.text-center {
	text-align: center;
}

#top-bar {
	.brand {
		padding: 0 20px 0 0;
		white-space: nowrap;
		
		img {
			border-top-left-radius: 4px;
			border-bottom-left-radius: 4px;
			vertical-align: top;
			height: 36px;
			margin: 2px 5px 0 20px;
		}
		
		label {
			display: inline-block;
			padding-top: 10px;
			font-size: 20px;
			font-weight: bold;
			.text-shadow(rgba(255, 255, 255, 0.74902) 0px 1px 1px);		
		}
	}
	
	.nav>li>a {
		padding: 10px;
	}
	
	.cart {
		.badge {
			margin-left: 10px;
		}
	}
	
	#admin-link {
		display: none;
	}
	
	.search {
		position: relative;
		
		.search-query {
			line-height: normal;
			padding-right: 29px;
			width: 175px;
		}
		
		.search-icon {
		    position: absolute;
		    top: 7px;
		    right: 11px;
		    width: 16px;
		    height: 16px;
		    
		    a, i {
		    	width: 16px;
		    	height: 16px;
		 		position: absolute;
		 		top: 0;
		 		left: 0;		    
		    }
		    
		    .search-glass {
		 		background: transparent url(../img/search.png) no-repeat 0 0;
		    }
		    
		    .search-clear {
		    	display: none;
		 		font-size: 20px;
		 		color: #000;
		 		cursor: pointer;
		 		top: -2px;
				text-decoration: none;	    
		    }
		}
		
		.search-icon-clear {
			.search-glass {
				display: none;
			}
			
			.search-clear {
				display: block;
			}
		}
	}
	
	
	.navbar-text {
		padding-right: 10px;
	}
}

#category-nav {
	li .close {
		color: #fff;
		display: none;
		opacity: 1;
		font-weight: normal;
		text-shadow: rgb(0,0,0) 0px 1px 0px;
	}
	
	li.active {
	    .close {
	    	display: block; 
	    }
	    
	    a {
	        background-color: #005580;
	        color: #fff;
	        cursor: pointer;
	    }
	}
}

#col-content {
	.navbar {
		min-height: 35px;
	}
}

.sidebar {
	h3 {
		font-size: 18px;
		margin-top: 5px;
	}
}

.thumbnails-prod {
	a:hover, a:active {
		text-decoration: none;
	}
	
	img {
		height: 210px;
		max-width: 210px;
		width: auto;
	}
}

.price {
	color: #900 !important;
	font-weight: bold;
}

.prod-metadata {
	margin-top: 2px;
	
	div {
		margin: 2px 0;
		line-height: normal;
	}
	
	div.rateit {
		div {
			margin: 0 0;
		}
	}

	.name {
		font-weight: bold;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	
	.desc {
		color: #888;
		font-size: 10px;
	}
	
	.price, .rating {
		margin-bottom: 5px;
	}
	
	.rating {
		color: #888;
		font-size: 10px;
		
		.rateit {
			vertical-align: middle;
		}
	}
}

.add-to-cart {
	button {
		margin-top: 10px;
	}
}

.media-review {
	margin-bottom: 10px;
	
	.date, .byline {
		color: #888;
		font-size: 10px;
		line-height: normal;
	}
	
	.comment {
		margin-top: 10px;
	}
	
}

#reviews {
	margin-top: 20px;
}

#dlg-add-review {
	.rateit {
		margin-top: 5px;
	}
	
	.help-block {
		color: #888;
		font-size: 10px;
		line-height: normal;
	}
}

#checkout, #product-info {
	.form-inline {
		padding: 20px 0 20px 35px;
	}
}

.img-gravitar {
	background: #fff url(../img/gravitar.jpg) no-repeat 50% 50%;
	width: 64px;
	height: 64px;
}

.footer {
	border-top: solid 1px #eee;
	padding: 5px;
	margin: 20px 0 10px;
	color: #aaa;
	letter-spacing: 0.1em;
	font-size: 11px;
	text-align: center;
}

#welcome {
	.navbar label {
		padding-left: 30px;
		cursor: default;
	}
	
	.carousel {
		background-image: url(../img/carousel/bg.png);
		.border-radius(5px);
		.box-shadow(0 2px 4px rgba(0,0,0,.2));

		.item {
			height: 347px;
		}
		
		.carousel-caption {
			background-color: transparent;
			position: absolute;
			bottom: 25px;
			right: 20px;
			text-align: right;
			
			img {
				position: absolute;
				top: 0;
				left: 0;
				height: 347px;
			}
			
			h2 {
				color: #fff;
				font-size: 65px;
				letter-spacing: -0.05em;
				font-weight: normal;
				line-height: 60px;
				.text-shadow(#000 0 1px 10px);
			}
			
			h3 {
				color: #fff;
				background: transparent url(../img/carousel/cloud.png) 50% bottom;
				width: 214px;
				font-size: 18px;
				letter-spacing: 0.1em;
				text-transform: uppercase;
				font-weight: normal;
				padding: 26px 0 0 0;
				line-height: 20px;
				text-align: center;
				display: inline-block;
				height: 71px;
				.border-box();
			}
			
			h4 {
				color: rgb(88, 89, 91);
				.text-shadow(rgba(255,255,255,.5) 0 -1px 1px);
				font-weight: normal;
				font-size: 26px;
				line-height: 33px;
			}
			
			p {
				.text-shadow(rgba(255,255,255,.3) 0 -1px 1px);
				color: rgb(115, 116, 119);
				font-weight: normal;
				font-size: 18px;
				line-height: 27px;
				margin-bottom: 5px;
				
				b {
					color: rgb(88, 89, 91);
				}		
			}
		}
		
		.carousel-indicators {
			bottom: 20px;
			top: auto;
			right: 35px;
			
			li {
				cursor: pointer;
			}
		}
		
		.carousel-control {
			top: 10%;
		}
	}

	.workload-detail {
		display: none;
	}
	
	#workloads {
		td {
			vertical-align: middle;
		}
		
		.desc {
			margin-bottom: 2px;
			color: #aaa;
		}
		
		input {
			margin-bottom: 0 !important;
		}
		
		h4 {
			margin-top: 6px;
		}
		
		.steps {
			width: 250px;
			
			ol {
				margin-bottom: 0;
				li {
					font-size: 12px;
					line-height: normal;
				}
			}
		}
	}
	
	#ddl {
		display: none;
		margin-bottom: 30px;
		
		textarea {
			.border-box();
			font-family: monospace;
			width: 100%;
			height: 300px;
			white-space: nowrap;
			overflow: auto;
		}
	}
}

